packages/webassemblyjs/test/fixtures/conversions/type-errors/trunc_u-i32-f64/module.wast
(module (func (result i32) (i32.trunc_u/f64 (i64.const 0))))
